# sorted.magaz

./: CMakeLists.txt  README.md
cpp/: bindings.cpp  external_sort.h
external_sort.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: external_sort.py  generate_data.py  gui.py
